--- a/src/components/home/footer/footer.css
+++ b/src/components/home/footer/footer.css
@@ -1,3 +1,15 @@
 .footer-container {
 	background-color: #010101;
 }
+
+.footer-container > .container-fluid > .d-flex > p-2, ul, li a {
+	color: #ffffff;
+	font-size: 10pt;
+	list-style: none;
+	text-decoration: none;
+}
+
+.custom-menu > li a:hover {
+	color: #fcdb00;
+	text-decoration: none;
+}
