added footer schema and remove debugger

--- a/src/components/home/footer/footer.css
+++ b/src/components/home/footer/footer.css
@@ -13,3 +13,11 @@
 	color: #fcdb00;
 	text-decoration: none;
 }
+
+.email > a {
+	text-decoration: none;
+}
+
+.email > a:hover {
+	color: #fcdb00;
+}
