--- a/src/components/top-menu/top-menu.css
+++ b/src/components/top-menu/top-menu.css
@@ -44,6 +44,10 @@
 	display: none;
 }
 
+.right > a {
+	text-decoration: none;
+}
+
 @media screen and (max-width: 600px) {
 	.top-menu {
 		padding-top: 0px;
